# Ledger-Free-Trustless-Battleship

./: .dockerignore  .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  docker-compose.yml  rust-toolchain.toml
core/: Cargo.toml
core/src/: lib.rs
docs/: README.md
docs/paper/: zk-battleship.tex
host/: Cargo.toml
host/src/: board_gen.rs  game.rs  lib.rs  prover.rs  transport.rs  verifier.rs
host/tests/: protocol.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
relay/: Cargo.toml  Dockerfile  fly.toml
relay/src/: main.rs
scripts/: play-online.ps1  play-online.sh
web/: .env.local.example  .gitignore  README.md  package-lock.json  package.json
web/app/: OnlinePvp.tsx  Setup.tsx  VsComputer.tsx  board.tsx  globals.css  layout.tsx  page.module.css  page.tsx
web/lib/: api.ts  coin.ts  relay.ts  types.ts
