[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
zk-battleship-core = { path = "../core" }
# `disable-dev-mode` makes it a hard error to run this build with
# RISC0_DEV_MODE set: mock proving is compiled out, not merely switched off.
risc0-zkvm = { version = "3.0", features = ["disable-dev-mode"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
tiny_http = "0.12"

[[bin]]
name = "zk-battleship-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "zk-battleship-bench"
path = "src/bin/bench.rs"
